[gd_scene load_steps=3 format=3 uid="uid://4jpr2lp2ibi6"]

[ext_resource type="Texture2D" uid="uid://qup58v5bfn1k" path="res://Grafiken/close.png" id="1_vgv3i"]
[ext_resource type="Script" path="res://Skripte/CloseT.gd" id="2_u4uwj"]

[node name="CloseT" type="TextureRect"]
offset_left = 1082.0
offset_top = 25.0
offset_right = 1130.0
offset_bottom = 73.0
mouse_default_cursor_shape = 2
texture = ExtResource("1_vgv3i")
script = ExtResource("2_u4uwj")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
